--- a/Shop/Users/templates/user.html
+++ b/Shop/Users/templates/user.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Hello, {{username}}</h1>
+    <a href="{% url 'products' %}">Products</a>
 </body>
 </html>
